# k-array-Predictive-Search

./: GenData.py  GenerateData.py  InterpolationSearch.py  KAPS_DifferentDistributions.py  KAPs_ComparativeAnalysis.py  L-Kaps.py  LKAPs_to_GChoice.py  L_Kaps.py  PlotDistribution.py  README.md  TestCode.py  TestCode_02.py  TestCode_03.py  pyproject.toml
experiments/: comparative_analysis.py  plot_distributions.py
src/kaps/: __init__.py  base_kaps.py  generators.py  l_kaps.py  lkaps_to_gchoice.py
src/kaps/baselines/: __init__.py  binary_search.py  interpolation_search.py
