[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k-array-predictive-search"
version = "0.1.0"
description = "K-Array Predictive Search (KAPS) – a distribution-aware search algorithm that generalizes binary search using predictive k-way subdivision."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "Rohan Gupta" }
]

dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7"
]

[project.urls]
Homepage = "https://github.com/RohanGupta404/k-array-Predictive-Search"
Repository = "https://github.com/RohanGupta404/k-array-Predictive-Search"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["kaps*"]
